--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ h1 {
     position:fixed;
     width: 100%;
     height: 100%;
-    background-image: url(/img/seccion1.png);
+    background-image: url(/img/seccion1/3.png);
     background-size: cover; /* Ajusta la imagen para cubrir toda la sección */
     background-repeat: no-repeat; /* Evita la repetición de la imagen */
     background-position: center center; 
@@ -263,13 +263,14 @@ h1 {
 /*-------------------------SECCION-02--------------------------------------*/
 
 .seccion02{
-    background-image: url(/img/seccion02.png);
+    background-image: url(/img/seccion2/1.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     position: relative;
     padding-top: 10px;
 }
+
 
 .seccion02-container {
     display: grid;
@@ -278,6 +279,14 @@ h1 {
     font-family: 'IM Fell English', serif;
     position: relative;
     padding: 20px;
+}
+.Contenedor-entrada {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    font-family: 'IM Fell English', serif;
+    position: relative;
+    padding: 20px; 
 }
 
 .select {
