--- a/style.css
+++ b/style.css
@@ -135,6 +135,82 @@ h1 {
         max-width: 120px;
     }
 }
+/*---------------------SECCION-00---------------------------*/
+.seccion00 {
+    display: flex;
+    align-items: center;
+    font-family:'IM Fell English', serif;
+    flex-direction: column;
+    border: none;
+    position: relative;
+    width: 100%;
+    height: 100vh; /* 100% del alto de la ventana */
+    overflow: hidden;
+    justify-content: flex-end;
+}
+
+#videoFondo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; /* Coloca el video detrás de los demás elementos */
+}
+
+.seccion00-link01{
+    font-size: 12px;
+    border: 2px solid #FA9C11;
+    border-radius: 5px ;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3px 10px;
+    z-index: 100;
+    margin: 10px 0;
+}
+.seccion00-link01 a{
+    font-size: 8px;
+    text-transform: uppercase;
+}
+
+.seccion00-link02 a{
+    font-size: 8px;
+    text-transform: uppercase;
+}
+
+.seccion00-link01:hover{
+    background-color: rgba(59, 52, 33, 0.5);
+    color: antiquewhite;
+}
+
+.seccion00-link02{
+    font-size: 12px;
+    background-color: #170F11;
+    color: antiquewhite;
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    z-index: 100;
+}
+
+.seccion00-link02:hover{
+    background-color: #29161b;
+}
+
+.contenido-posterior {
+    /* Estilos para el contenido que viene después del video */
+    background: #fff; /* Cambia el fondo según tus preferencias */
+    color: #000; /* Cambia el color de texto según tus preferencias */
+    padding: 20px;
+}
+
+
+
+
+
 
 
 /*---------------------SECCION-01---------------------------*/
@@ -145,19 +221,13 @@ h1 {
     font-family:'IM Fell English', serif;
     flex-direction: column;
     border: none;
+    background-image: url(/img/seccion1/3.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed; /* Esto hace que el fondo se mantenga fijo */
 }
 
-.seccion01::after {
-    content: '';
-    position:fixed;
-    width: 100%;
-    height: 100%;
-    background-image: url(/img/seccion1/3.png);
-    background-size: cover; /* Ajusta la imagen para cubrir toda la sección */
-    background-repeat: no-repeat; /* Evita la repetición de la imagen */
-    background-position: center center; 
-    z-index: -1;
-}
 
 .seccion01-item {
     display: flex;
@@ -218,47 +288,19 @@ h1 {
     text-transform: uppercase;
 }
 
-.seccion01-link01{
-    font-size: 12px;
-    border: 2px solid #FA9C11;
-    border-radius: 5px ;
-    text-decoration: none;
+
+.seccion01-h3_informacionFecha{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 3px 10px;
-    z-index: 100;
-    margin: 10px 0;
-}
-.seccion01-link01 a{
-    font-size: 8px;
-    text-transform: uppercase;
-}
-
-.seccion01-link02 a{
-    font-size: 8px;
-    text-transform: uppercase;
-}
-
-.seccion01-link01:hover{
-    background-color: #FA9C11;
     color: antiquewhite;
-}
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 11px;
+    margin-bottom: 100px;
+    
 
-.seccion01-link02{
-    font-size: 12px;
-    background-color: #170F11;
-    color: antiquewhite;
-    padding: 5px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    z-index: 100;
 }
-
-.seccion01-link02:hover{
-    background-color: #29161b;
-}
-
 
 /*-------------------------SECCION-02--------------------------------------*/
 
