--- a/style.css
+++ b/style.css
@@ -33,9 +33,8 @@ nav {
 }
 
 .nav-bar img{
-    width:64px;
     height: 74px;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .nav-item button {
@@ -171,6 +170,7 @@ h1 {
     padding: 3px 10px;
     z-index: 100;
     margin: 10px 0;
+    background-color: rgba(59, 52, 33, 0.5);
 }
 .seccion00-link01 a{
     font-size: 8px;
@@ -183,8 +183,8 @@ h1 {
 }
 
 .seccion00-link01:hover{
-    background-color: rgba(59, 52, 33, 0.5);
-    color: antiquewhite;
+    background-color: rgba(25, 22, 15, 0.5);
+    color: #FA9C11;
 }
 
 .seccion00-link02{
@@ -283,6 +283,12 @@ h1 {
     }
 }
 
+@media screen and (max-width: 500px) {
+    .seccion01-item h2 {
+        font-size: 20px ;
+        max-width: 100%;
+    }
+}
 .seccion01-item a {
     text-decoration: none;
     color: rgb(227, 220, 199);
@@ -301,6 +307,12 @@ h1 {
     margin-bottom: 100px;
     
 
+}
+@media screen and (max-width: 500px) {
+    .seccion01-h3_informacionFecha{
+        font-size: 7px ;
+        max-width: 100%;
+    }
 }
 
 /*-------------------------SECCION-02--------------------------------------*/
@@ -440,8 +452,12 @@ a:hover {
 @media screen and (max-width: 768px) {
     .seccion02 {
         grid-template-columns: 1fr; /* Cambia a una sola columna */
+        
     }
+    
+    
 }
+
 
 
 /*--------------------SECCION-03----------------------------------------*/
